# ProjectSalus

./: .gitignore  .secrets.baseline  CLAUDE.md  Dockerfile  ReadMe  pyproject.toml  salus.project.yaml
.claude/: settings.json
forge_sdlc-main/: .gitignore  config_sync_validator.py  pyproject.toml  run_build_claude.py  service_map.yaml
forge_sdlc-main/forge_claude/: claude_md_generator.py
forge_sdlc-main/forge_claude/agents/: forge-regression-reviewer.md  forge-type-design-analyzer.md
forge_sdlc-main/forge_claude/skills/forge-complete/: SKILL.md
forge_sdlc-main/forge_claude/skills/forge-execute/: SKILL.md
forge_sdlc-main/forge_claude/skills/forge-improve/: SKILL.md
forge_sdlc-main/forge_claw/: AGENTS.md
forge_sdlc-main/forge_claw/agents/: forge-code-simplifier.md  forge-frontend-design-reviewer.md  forge-repo-scale-reviewer.md  forge-silent-failure-hunter.md  forge-spec-compliance.md
forge_sdlc-main/forge_claw/clinerules/: design-system.md  forge-workflow.md  review-gates.md  standards.md
forge_sdlc-main/forge_core/: __init__.py  audit.py  cli.py  coderabbit_sync.py  config_sync.py  cross_cutting.py  defect_ledger.py  evidence.py  feedback.py  gap_taxonomy.yaml  health.py  jsonl_io.py  log.py  preflight.py  scorecard.py  session.py  standards_checker.py  standards_loader.py  state_machine.py  telemetry.py  tracker.py  utils.py  validators.py  verify.py  yaml_io.py
forge_sdlc-main/forge_remediation/: action_catalog.yaml  build_models.yaml  escalation_policy.yaml  failure_taxonomy.yaml  review_models.yaml  rollback_policy.yaml  service_map.yaml  tier_rules.yaml  triage_rules.yaml
forge_sdlc-main/hooks/cc/: enforce-phase-complete.sh  post-commit.sh  post-complete.sh  post-implement.sh  post-review.sh  pre-commit.sh  pre-complete.sh  pre-review.sh  pre-task.sh
forge_sdlc-main/hooks/cline/: post_commit.py  post_complete.py  post_implement.py  post_review.py  pre_commit.py  pre_complete.py  pre_review.py  pre_task.py
forge_sdlc-main/scripts/: deploy-coderabbit.sh
forge_sdlc-main/standards/: api-client-contracts.md  api-design.md  component-testing.md  configuration.md  database.md  dependency-management.md  documentation.md  error-boundaries.md  error-handling.md  frontend-design-system.md  logging.md  security.md  testing.md  type-safety.md  typescript-safety.md
forge_sdlc-main/standards/ops/: API_CONTRACT_STANDARD.md  AUTH_SSO_STANDARD.md  CODEX_STANDARDS_REVIEW.md  FORGE_GATE_POLICY.md  FORGE_PROJECT_SCHEMA.md  SECURITY_CONTROLS.md
forge_sdlc-main/templates/coderabbit/: base.yaml  overlay-fullstack.yaml  overlay-nextjs.yaml  overlay-python.yaml
forge_sdlc-main/templates/github-workflows/: coderabbit-review.yml
forge_sdlc-main/tests/core/: test_cross_cutting.py  test_evidence.py  test_standards_checker.py  test_state_machine.py  test_validators.py
(+457 files in other folders)
