[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "salus"
version = "0.1.0"
description = "cUAS site coverage simulation tool"
requires-python = ">=3.11"
license = {text = "Proprietary"}
dependencies = [
    # Geometry
    "shapely>=2.0",
    "geopandas>=0.14",
    "fiona>=1.9",

    # Scientific computing
    "numpy>=1.26",
    "scipy>=1.12",

    # Geospatial (NOTE: GDAL, rasterio, pyproj, pdal installed via conda-forge)
    # "GDAL" -- installed via conda, not pip
    # "rasterio" -- installed via conda, not pip
    # "pyproj" -- installed via conda, not pip
    # "pdal" -- installed via conda, not pip

    # Visualisation
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "contextily>=1.4",

    # Report generation
    "jinja2>=3.1",
    "weasyprint>=60.0",

    # Data & configuration
    "pyyaml>=6.0",
    "pydantic>=2.5",

    # CLI
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.3",
]
interface = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "mercantile>=1.2",
    "Pillow>=10.0",
]

[project.scripts]
salus = "salus.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
