[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-sdlc"
version = "1.0.0"
description = "Forge — SDLC framework for autonomous software development with multi-face integration"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "filelock>=3.13",
    "httpx>=0.27",
    "packaging>=24.0",
    "structlog>=24.1",
    "jsonschema>=4.21",
    "ruff>=0.4",
]

[project.optional-dependencies]
db = ["psycopg2-binary>=2.9"]
full = ["psycopg2-binary>=2.9", "cryptography>=42.0", "msal>=1.28"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "pytest-mock>=3.14"]

[project.scripts]
forge = "forge_core.cli:cli"

[tool.setuptools.packages.find]
include = ["forge_core", "forge_core.*", "forge_claude", "forge_claude.*", "forge_claw", "forge_claw.*", "forge_remediation", "forge_remediation.*"]

[tool.coverage.run]
source = ["forge_core"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]
